backend/k8s/ai-symptom-checker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-symptom-checker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-symptom-checker-service
  template:
    metadata:
      labels:
        app: ai-symptom-checker-service
    spec:
      containers:
      - name: ai-symptom-checker-service
        image: backend-ai-symptom-checker-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5008
---
apiVersion: v1
kind: Service
metadata:
  name: ai-symptom-checker-service
spec:
  selector:
    app: ai-symptom-checker-service
  ports:
  - port: 5008
    targetPort: 5008
