backend/k8s/pharmacy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmacy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pharmacy-service
  template:
    metadata:
      labels:
        app: pharmacy-service
    spec:
      containers:
      - name: pharmacy-service
        image: backend-pharmacy-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: pharmacy-service
spec:
  selector:
    app: pharmacy-service
  ports:
  - port: 5005
    targetPort: 5005
