backend/k8s/telemedicine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemedicine-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemedicine-service
  template:
    metadata:
      labels:
        app: telemedicine-service
    spec:
      containers:
      - name: telemedicine-service
        image: backend-telemedicine-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5007
---
apiVersion: v1
kind: Service
metadata:
  name: telemedicine-service
spec:
  selector:
    app: telemedicine-service
  ports:
  - port: 5007
    targetPort: 5007
